projects/compiler/test/typechecker/binary/divide_eq_error.2.out
Error at %FILE_NAME%:2:3
Type mismatch
  |  a /= 2
       ^
Expected: Int
but instead found: Float
